tests/baselines/reference/generatorTypeCheck48.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck48.ts(1,11): error TS7010: 'g', which lacks return-type annotation, implicitly has an 'any' return type.
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck48.ts(5,11): error TS7010: 'h', which lacks return-type annotation, implicitly has an 'any' return type.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck48.ts (2 errors) ====
    function* g() {
              ~
!!! error TS7010: 'g', which lacks return-type annotation, implicitly has an 'any' return type.
        yield;
    }
    
    function* h() {
              ~
!!! error TS7010: 'h', which lacks return-type annotation, implicitly has an 'any' return type.
        yield undefined;
    }
    